# collider_check

./: .__afsC6AA  .gitignore  README.md  check.txt  collider_check.py  demo.ipynb  pyproject.toml  readme.md  twiss_check.py
.github/workflows/: tests.yaml
collider_check/: collider_check.py
collider_check.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebook/: demonstration.ipynb
output/: check.txt  check_without_config.txt
src/: collider_check.py
src/collider_check/: __init__.py  collider_check.py
src/collider_check.egg-info/: PKG-INFO
test_data/: config.yaml
tests/: test_check.py
