[project]
name = "collider-check"
version = "0.2.8"
description = "A small package that provides functions to check the observables in a collider, using a collider built with Xsuite."
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [{ name = "Colas Droin", email = "colas.noe.droin@cern.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["xsuite", "accelerator", "collider"]

dependencies = []

[project.urls]
Homepage = "https://github.com/ColasDroin/collider_check"